@@ -35,7 +35,6 @@ SET(OBD_DEFAULT_DATABASE "./obdlogger.db" CACHE STRING "Default database filenam
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OBDLogger_SOURCE_DIR}/cmakemodules")
 
-#OPTION(ENABLE_GPSD "Enable gps support using libgps" TRUE)
 SET(ENABLE_GPSD "ON" CACHE BOOL "Enable gps support using libgps")
 FIND_PACKAGE(GPSD)
 IF(ENABLE_GPSD)
@@ -47,6 +46,18 @@ IF(ENABLE_GPSD)
 		MESSAGE(STATUS "Couldn't find libgps")
 	ENDIF(GPSD_FOUND)
 ENDIF(ENABLE_GPSD)
+
+SET(ENABLE_DBUS "OFF" CACHE BOOL "Enable dbus support")
+FIND_PACKAGE(Dbus)
+IF(ENABLE_DBUS)
+	IF(DBUS_FOUND)
+		INCLUDE_DIRECTORIES(${DBUS_INCLUDE_DIR})
+		ADD_DEFINITIONS(-DHAVE_DBUS)
+	ELSE(DBUS_FOUND)
+		SET(ENABLE_DBUS "OFF" CACHE BOOL "Enable dbus support" FORCE)
+		MESSAGE(STATUS "Couldn't find dbus")
+	ENDIF(DBUS_FOUND)
+ENDIF(ENABLE_DBUS)
 
 CONFIGURE_FILE("${OBDLogger_SOURCE_DIR}/src/obdconfig.h.cmake" "${OBDLogger_BINARY_DIR}/obdconfig.h")
 INCLUDE_DIRECTORIES("${OBDLogger_BINARY_DIR}")
