@@ -10,6 +10,8 @@ Configuration file
 
 Trouble codes?
 
+Enable little longer timeouts on the elm device
+
 Optimisations:
  - SQLite insert batching or turn off synchronous or something.
  - Change --enable-optimisations to take a version number or allow
