@@ -39,6 +39,10 @@ IF(ENABLE_GPSD)
 	SET(OBDLOGGER_LIBS ${OBDLOGGER_LIBS} ${GPSD_LIBRARY})
 ENDIF(ENABLE_GPSD)
 
+IF(ENABLE_DBUS)
+	SET(OBDLOGGER_LIBS ${OBDLOGGER_LIBS} ${DBUS_LIBRARY})
+ENDIF(ENABLE_DBUS)
+
 ADD_EXECUTABLE(obdgpslogger ${OBDLOGGER_SRCS})
 
 TARGET_LINK_LIBRARIES(obdgpslogger ${OBDLOGGER_LIBS})
